# CRIMP

./: .gitignore  README.md  calcPhase.py  crtTimeIntForToAs.py  ephemeridesAtTmjd.py  periodSearch.py  pyproject.toml  readPPTemp.py  readTimMod.py
crimp/: __init__.py  binPhases.py  binphases.py  buildTimeIntToAs.py  buildtimeintervalsToAs.py  calcPhase.py  calcphase.py  crtPPTemplateMod.py  crtTimeIntForToAs.py  diagnoseToAs.py  ephemIntRotation.py  ephemIntegerRotation.py  ephemTmjd.py  ephemeridesAtTmjd.py  ephemeridesIntRotation.py  eventfile.py  evtFileOps.py  measToAs.py  measureToAs.py  periodSearch.py  periodsearch.py  phShiftToTimFile.py  phshiftTotimfile.py  pulseProfileOps.py  pulseprofile.py  readPPtemplate.py  readTimMod.py  readtimingmodel.py  simSineEvtFile.py  simulatemodulatedlc.py  templatemodels.py
crimp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
crimp/crimp.egg-info/: entry_points.txt
data/: 1e2259.par  1e2259_ni1020600110.fits  1e2259_template.txt  ToAs_2259.tim  ToAs_2259.txt  timIntToAs_1e2259.txt  timIntToAs_1e2259_bunches.txt
docs/: diagnosetoas.md  example_1e2259_toas.md  fittoas.md  measuretoas.md  overview.md  phshifttotimfile.md  templatepulseprofile.md  timeintervalsfortoas.md
scripts/: diagnoseToAs.py  phShiftToTimFile.py
src/: __init__.py  calcPhase.py  crtPP.py  crtTimeIntForToAs.py  diagnoseToAs.py  ephemeridesAtTmjd.py  evtFileOps.py  foldPhases.py  measToAs.py  phShiftToTimFile.py  pulseProfileOps.py  readPPTemp.py  templateModels.py
src/crimp/: __init__.py  binphases.py  buildtimeintervalsToAs.py  bursts.py  calcphase.py  diagnoseToAs.py  ephemIntegerRotation.py  ephemTmjd.py  eventfile.py  fit_toas.py  get_local_ephem.py  lightcurve.py  logging_utils.py  measureToAs.py  merge_overlapping_timfiles.py  periodsearch.py  phshiftTotimfile.py  plot_local_ephem.py  plot_pps.py  plotting_pp.py  pulseprofile.py  readPPtemplate.py  readtimingmodel.py  simulatemodulatedlc.py  templatemodels.py  timfile.py  utilities_fittoas.py
src/crimp.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
src/crimp/crimp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
