[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "crimp"
version = "2.1.1"
dependencies = [
  "lmfit",
  "plotly",
  "numpy",
  "matplotlib",
  "pandas",
  "scipy",
  "astropy",
  "corner",
  "emcee",
  "pyyaml"
]
requires-python = ">=3.8"
authors = [
  {name = "George Younes", email = "george.a.younes@nasa.gov"},
]
maintainers = [
  {name = "George Younes", email = "george.a.younes@nasa.gov"}
]
description = "Code for Rotational analysis of Isolated Magnetars and Pulsars"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["pulsar", "magnetar", "timing", "toa", "pulse"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.scripts]
timeintervalsfortoas = "crimp.buildtimeintervalsToAs:main"
templatepulseprofile = "crimp.pulseprofile:main"
measuretoas = "crimp.measureToAs:main"
diagnosetoas = "crimp.diagnoseToAs:main"
addphasecolumn = "crimp.eventfile:main"
ephemintegerrotation = "crimp.ephemIntegerRotation:main"
phshifttotimfile = "crimp.timfile:main"
fittoas = "crimp.fit_toas:main"
localephemerides = "crimp.get_local_ephem:main"
pulseprofile_plots = "crimp.plot_pps:main"
localephemerides_plot = "crimp.plot_local_ephem:main"