[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "crimp"
version = "2.2.0"
dependencies = [
  "lmfit",
  "plotly",
  "numpy",
  "matplotlib",
  "pandas",
  "scipy",
  "astropy",
  "corner",
  "emcee",
  "pyyaml"
]
requires-python = ">=3.8"
authors = [
  {name = "George Younes", email = "george.a.younes@nasa.gov"},
]
maintainers = [
  {name = "George Younes", email = "george.a.younes@nasa.gov"}
]
description = "Code for Rotational analysis of Isolated Magnetars and Pulsars"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["pulsar", "magnetar", "timing", "toa", "pulse"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.scripts]
timeintervalsfortoas = "crimp.buildtimeintervalsToAs:main"
templatepulseprofile = "crimp.pulseprofile:main"
measuretoas = "crimp.measureToAs:main"
diagnosetoas = "crimp.diagnoseToAs:main"
addphasecolumn = "crimp.eventfile:main"  # No documentation yet
ephemintegerrotation = "crimp.ephemIntegerRotation:main"  # No documentation yet
phshifttotimfile = "crimp.timfile:main"
fittoas = "crimp.fit_toas:main"
localephemerides = "crimp.get_local_ephem:main"  # No documentation yet
pulseprofile_plots = "crimp.plot_pps:main"  # No documentation yet
localephemerides_plot = "crimp.plot_local_ephem:main"  # No documentation yet
mergeoverlappingtims = "crimp.merge_overlapping_timfiles:main"  # No documentation yet